# mlx-a2a

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytorch_to_MLX.md
io_capture_get_rope_index/: get_rope_index_outputs.npz
io_capture_qwen2_5_omni_rope_index/: get_rope_index_metadata.json
io_capture_qwen2_5omniaudioattention_forward/: input_metadata.json  inputs.pt  output_metadata.json  outputs.pt
io_capture_qwen2_5omniaudioencoder_forward/: input_metadata.json  inputs.pt  output_metadata.json  outputs.pt
io_capture_qwen2_5omnithinkerforconditionalgeneration_get_rope_index/: input_metadata.json  inputs.npz  inputs.pt  output_metadata.json  outputs.pt
mlx_a2a/: convert.py
mlx_a2a/models/: qwen2_5_omni.py
mlx_a2a/tests/: test_qwen2_5_omni.py
